kubernetes/pgadmin/pgadmin.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: assetvar
spec:

  replicas: 1
  selector:
    matchLabels:
      k8s-app: pgadmin
  template:
    metadata:
      labels:
        k8s-app: pgadmin
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"
      priorityClassName: essential

      containers:
      - name: pgadmin
        resources:
        image: dpage/pgadmin4
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
  namespace: assetvar
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: pgadmin
  loadBalancerIP: 192.168.6.76
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
  namespace: assetvar
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: pgadmin
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadminingress
  namespace: assetvar
spec:
  rules:
  - host: pgadmin.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-tls
  namespace: assetvar
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`pgadmin.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: pgadmin
      port: 80
  tls:
    secretName: pgadmin-bas-tls
